Fix up the Amazon:S3 menu (closing </li>s)

--- a/_includes/menu-amazon-s3.html
+++ b/_includes/menu-amazon-s3.html
@@ -3,53 +3,53 @@
   <li class="tab-amazon-s3 nav-header">Amazon S3</li>
 
   <li class="nav-header">Operations on the Service</li>
-  <a href="list-buckets.html">ListBuckets</a>
+  <a href="list-buckets.html">ListBuckets</a></li>
 
   <li class="nav-header">Operations on Buckets</li>
-  <a href="delete-buckets.html">DeleteBuckets</a>
-  <a href="delete-bucket-lifecycle.html">DeleteBucketLifecycle</a>
-  <a href="delete-bucket-policy.html">DeleteBucketPolicy</a>
-  <a href="delete-bucket-tagging.html">DeleteBucketTagging</a>
-  <a href="delete-bucket-website.html">DeleteBucketWebsite</a>
-  <a href="list-objects.html">ListObjects</a>
-  <a href="get-bucket-acl.html">GetBucketAcl</a>
-  <a href="get-bucket-lifecycle.html">GetBucketLifecycle</a>
-  <a href="get-bucket-policy.html">GetBucketPolicy</a>
-  <a href="get-bucket-tagging.html">GetBucketTagging</a>
-  <a href="get-bucket-location.html">GetBucketLocation</a>
-  <a href="get-bucket-logging.html">GetBucketLogging</a>
-  <a href="get-bucket-notification.html">GetBucketNotification</a>
-  <a href="get-bucket-objectversions.html">GetBucketObjectVersions</a>
-  <a href="get-bucket-requestpayment.html">GetBucketRequestPayment</a>
-  <a href="get-bucket-versioning.html">GetBucketVersioning</a>
-  <a href="get-bucket-website.html">GetBucketWebsite</a>
-  <a href="check-bucket.html">CheckBucket</a>
-  <a href="list-multipart-uploads.html">ListMultipartUploads</a>
-  <a href="create-bucket.html">CreateBucket</a>
-  <a href="put-bucket-acl.html">PutBucketAcl</a>
-  <a href="put-bucket-lifecycle.html">PutBucketLifecycle</a>
-  <a href="put-bucket-policy.html">PutBucketPolicy</a>
-  <a href="put-bucket-logging.html">PutBucketLogging</a>
-  <a href="put-bucket-notification.html">PutBucketNotification</a>
-  <a href="put-bucket-tagging.html">PutBucketTagging</a>
-  <a href="put-bucket-requestpayment.html">PutBucketRequestPayment</a>
-  <a href="put-bucket-versioning.html">PutBucketVersioning</a>
-  <a href="put-bucket-website.html">PutBucketWebsite</a>
+  <a href="delete-buckets.html">DeleteBuckets</a></li>
+  <a href="delete-bucket-lifecycle.html">DeleteBucketLifecycle</a></li>
+  <a href="delete-bucket-policy.html">DeleteBucketPolicy</a></li>
+  <a href="delete-bucket-tagging.html">DeleteBucketTagging</a></li>
+  <a href="delete-bucket-website.html">DeleteBucketWebsite</a></li>
+  <a href="list-objects.html">ListObjects</a></li>
+  <a href="get-bucket-acl.html">GetBucketAcl</a></li>
+  <a href="get-bucket-lifecycle.html">GetBucketLifecycle</a></li>
+  <a href="get-bucket-policy.html">GetBucketPolicy</a></li>
+  <a href="get-bucket-tagging.html">GetBucketTagging</a></li>
+  <a href="get-bucket-location.html">GetBucketLocation</a></li>
+  <a href="get-bucket-logging.html">GetBucketLogging</a></li>
+  <a href="get-bucket-notification.html">GetBucketNotification</a></li>
+  <a href="get-bucket-objectversions.html">GetBucketObjectVersions</a></li>
+  <a href="get-bucket-requestpayment.html">GetBucketRequestPayment</a></li>
+  <a href="get-bucket-versioning.html">GetBucketVersioning</a></li>
+  <a href="get-bucket-website.html">GetBucketWebsite</a></li>
+  <a href="check-bucket.html">CheckBucket</a></li>
+  <a href="list-multipart-uploads.html">ListMultipartUploads</a></li>
+  <a href="create-bucket.html">CreateBucket</a></li>
+  <a href="put-bucket-acl.html">PutBucketAcl</a></li>
+  <a href="put-bucket-lifecycle.html">PutBucketLifecycle</a></li>
+  <a href="put-bucket-policy.html">PutBucketPolicy</a></li>
+  <a href="put-bucket-logging.html">PutBucketLogging</a></li>
+  <a href="put-bucket-notification.html">PutBucketNotification</a></li>
+  <a href="put-bucket-tagging.html">PutBucketTagging</a></li>
+  <a href="put-bucket-requestpayment.html">PutBucketRequestPayment</a></li>
+  <a href="put-bucket-versioning.html">PutBucketVersioning</a></li>
+  <a href="put-bucket-website.html">PutBucketWebsite</a></li>
 
   <li class="nav-header">Operations on Objects</li>
-  <a href="delete-object.html">DeleteObject</a>
-  <a href="delete-multipleobjects.html">DeleteMultipleObjects</a>
-  <a href="get-object.html">GetObject</a>
-  <a href="get-object-acl.html">GetObjectAcl</a>
-  <a href="get-object-torrent.html">GetObjectTorrent</a>
-  <a href="get-object-metadata.html">GetObjectMetadata</a>
+  <a href="delete-object.html">DeleteObject</a></li>
+  <a href="delete-multipleobjects.html">DeleteMultipleObjects</a></li>
+  <a href="get-object.html">GetObject</a></li>
+  <a href="get-object-acl.html">GetObjectAcl</a></li>
+  <a href="get-object-torrent.html">GetObjectTorrent</a></li>
+  <a href="get-object-metadata.html">GetObjectMetadata</a></li>
   <!--  PostObject -->
-  <a href="put-object.html">PutObject</a>
-  <a href="put-object-acl.html">PutObjectAcl</a>
-  <a href="copy-object.html">CopyObject</a>
-  <a href="initiate-multipart-upload.html">InitiateMultipartUpload</a>
-  <a href="upload-part.html">UploadPart</a>
-  <a href="upload-part-copy.html">UploadPartCopy</a>
-  <a href="complete-multipart-upload.html">CompleteMultipartUpload</a>
-  <a href="abort-multipart-upload.html">AbortMultipartUpload</a>
-  <a href="list-parts.html">ListParts</a>
+  <a href="put-object.html">PutObject</a></li>
+  <a href="put-object-acl.html">PutObjectAcl</a></li>
+  <a href="copy-object.html">CopyObject</a></li>
+  <a href="initiate-multipart-upload.html">InitiateMultipartUpload</a></li>
+  <a href="upload-part.html">UploadPart</a></li>
+  <a href="upload-part-copy.html">UploadPartCopy</a></li>
+  <a href="complete-multipart-upload.html">CompleteMultipartUpload</a></li>
+  <a href="abort-multipart-upload.html">AbortMultipartUpload</a></li>
+  <a href="list-parts.html">ListParts</a></li>
