--- a/_includes/menu-amazon-ec2.html
+++ b/_includes/menu-amazon-ec2.html
@@ -1,4 +1,138 @@
   <li><a href="/amazon/">&laquo; back</a></li>
 
   <li class="tab-amazon-ec2 nav-header">Amazon EC2</li>
-  <li>ToDo</li>
+
+  <li class="tab-amazon-ec2-allocate-address"><a href="allocate-address.html">AllocateAddress</a></li>
+  <li class="tab-amazon-ec2-assign-private-ip-addresses"><a href="assign-private-ip-addresses.html">AssignPrivateIpAddresses</a></li>
+  <li class="tab-amazon-ec2-associate-address"><a href="associate-address.html">AssociateAddress</a></li>
+  <li class="tab-amazon-ec2-associate-dhcp-options"><a href="associate-dhcp-options.html">AssociateDhcpOptions</a></li>
+  <li class="tab-amazon-ec2-associate-route-table"><a href="associate-route-table.html">AssociateRouteTable</a></li>
+  <li class="tab-amazon-ec2-attach-internet-gateway"><a href="attach-internet-gateway.html">AttachInternetGateway</a></li>
+  <li class="tab-amazon-ec2-attach-network-interface"><a href="attach-network-interface.html">AttachNetworkInterface</a></li>
+  <li class="tab-amazon-ec2-attach-volume"><a href="attach-volume.html">AttachVolume</a></li>
+  <li class="tab-amazon-ec2-attach-vpn-gateway"><a href="attach-vpn-gateway.html">AttachVpnGateway</a></li>
+  <li class="tab-amazon-ec2-authorize-security-group-egress"><a href="authorize-security-group-egress.html">AuthorizeSecurityGroupEgress</a></li>
+  <li class="tab-amazon-ec2-authorize-security-group-ingress"><a href="authorize-security-group-ingress.html">AuthorizeSecurityGroupIngress</a></li>
+  <li class="tab-amazon-ec2-bundle-instance"><a href="bundle-instance.html">BundleInstance</a></li>
+  <li class="tab-amazon-ec2-cancel-bundle-task"><a href="cancel-bundle-task.html">CancelBundleTask</a></li>
+  <li class="tab-amazon-ec2-cancel-conversion-task"><a href="cancel-conversion-task.html">CancelConversionTask</a></li>
+  <li class="tab-amazon-ec2-cancel-export-task"><a href="cancel-export-task.html">CancelExportTask</a></li>
+  <li class="tab-amazon-ec2-cancel-spot-instance-requests"><a href="cancel-spot-instance-requests.html">CancelSpotInstanceRequests</a></li>
+  <li class="tab-amazon-ec2-confirm-product-instance"><a href="confirm-product-instance.html">ConfirmProductInstance</a></li>
+  <li class="tab-amazon-ec2-create-customer-gateway"><a href="create-customer-gateway.html">CreateCustomerGateway</a></li>
+  <li class="tab-amazon-ec2-create-dhcp-options"><a href="create-dhcp-options.html">CreateDhcpOptions</a></li>
+  <li class="tab-amazon-ec2-create-image"><a href="create-image.html">CreateImage</a></li>
+  <li class="tab-amazon-ec2-create-instance-export-task"><a href="create-instance-export-task.html">CreateInstanceExportTask</a></li>
+  <li class="tab-amazon-ec2-create-internet-gateway"><a href="create-internet-gateway.html">CreateInternetGateway</a></li>
+  <li class="tab-amazon-ec2-create-key-pair"><a href="create-key-pair.html">CreateKeyPair</a></li>
+  <li class="tab-amazon-ec2-create-network-acl-entry"><a href="create-network-acl-entry.html">CreateNetworkAclEntry</a></li>
+  <li class="tab-amazon-ec2-create-network-acl"><a href="create-network-acl.html">CreateNetworkAcl</a></li>
+  <li class="tab-amazon-ec2-create-network-interface"><a href="create-network-interface.html">CreateNetworkInterface</a></li>
+  <li class="tab-amazon-ec2-create-placement-group"><a href="create-placement-group.html">CreatePlacementGroup</a></li>
+  <li class="tab-amazon-ec2-create-route"><a href="create-route.html">CreateRoute</a></li>
+  <li class="tab-amazon-ec2-create-route-table"><a href="create-route-table.html">CreateRouteTable</a></li>
+  <li class="tab-amazon-ec2-create-security-group"><a href="create-security-group.html">CreateSecurityGroup</a></li>
+  <li class="tab-amazon-ec2-create-snapshot"><a href="create-snapshot.html">CreateSnapshot</a></li>
+  <li class="tab-amazon-ec2-create-spot-datafeed-subscription"><a href="create-spot-datafeed-subscription.html">CreateSpotDatafeedSubscription</a></li>
+  <li class="tab-amazon-ec2-create-subnet"><a href="create-subnet.html">CreateSubnet</a></li>
+  <li class="tab-amazon-ec2-create-tags"><a href="create-tags.html">CreateTags</a></li>
+  <li class="tab-amazon-ec2-create-volume"><a href="create-volume.html">CreateVolume</a></li>
+  <li class="tab-amazon-ec2-create-vpc"><a href="create-vpc.html">CreateVpc</a></li>
+  <li class="tab-amazon-ec2-create-vpn-connection"><a href="create-vpn-connection.html">CreateVpnConnection</a></li>
+  <li class="tab-amazon-ec2-create-vpn-gateway"><a href="create-vpn-gateway.html">CreateVpnGateway</a></li>
+  <li class="tab-amazon-ec2-delete-customer-gateway"><a href="delete-customer-gateway.html">DeleteCustomerGateway</a></li>
+  <li class="tab-amazon-ec2-delete-dhcp-options"><a href="delete-dhcp-options.html">DeleteDhcpOptions</a></li>
+  <li class="tab-amazon-ec2-delete-internet-gateway"><a href="delete-internet-gateway.html">DeleteInternetGateway</a></li>
+  <li class="tab-amazon-ec2-delete-key-pair"><a href="delete-key-pair.html">DeleteKeyPair</a></li>
+  <li class="tab-amazon-ec2-delete-network-acl-entry"><a href="delete-network-acl-entry.html">DeleteNetworkAclEntry</a></li>
+  <li class="tab-amazon-ec2-delete-network-acl"><a href="delete-network-acl.html">DeleteNetworkAcl</a></li>
+  <li class="tab-amazon-ec2-delete-network-interface"><a href="delete-network-interface.html">DeleteNetworkInterface</a></li>
+  <li class="tab-amazon-ec2-delete-placement-group"><a href="delete-placement-group.html">DeletePlacementGroup</a></li>
+  <li class="tab-amazon-ec2-delete-route"><a href="delete-route.html">DeleteRoute</a></li>
+  <li class="tab-amazon-ec2-delete-route-table"><a href="delete-route-table.html">DeleteRouteTable</a></li>
+  <li class="tab-amazon-ec2-delete-security-group"><a href="delete-security-group.html">DeleteSecurityGroup</a></li>
+  <li class="tab-amazon-ec2-delete-snapshot"><a href="delete-snapshot.html">DeleteSnapshot</a></li>
+  <li class="tab-amazon-ec2-delete-spot-datafeed-subscription"><a href="delete-spot-datafeed-subscription.html">DeleteSpotDatafeedSubscription</a></li>
+  <li class="tab-amazon-ec2-delete-subnet"><a href="delete-subnet.html">DeleteSubnet</a></li>
+  <li class="tab-amazon-ec2-delete-tags"><a href="delete-tags.html">DeleteTags</a></li>
+  <li class="tab-amazon-ec2-delete-volume"><a href="delete-volume.html">DeleteVolume</a></li>
+  <li class="tab-amazon-ec2-delete-vpc"><a href="delete-vpc.html">DeleteVpc</a></li>
+  <li class="tab-amazon-ec2-delete-vpn-connection"><a href="delete-vpn-connection.html">DeleteVpnConnection</a></li>
+  <li class="tab-amazon-ec2-delete-vpn-gateway"><a href="delete-vpn-gateway.html">DeleteVpnGateway</a></li>
+  <li class="tab-amazon-ec2-deregister-image"><a href="deregister-image.html">DeregisterImage</a></li>
+  <li class="tab-amazon-ec2-describe-addresses"><a href="describe-addresses.html">DescribeAddresses</a></li>
+  <li class="tab-amazon-ec2-describe-availability-zones"><a href="describe-availability-zones.html">DescribeAvailabilityZones</a></li>
+  <li class="tab-amazon-ec2-describe-bundle-tasks"><a href="describe-bundle-tasks.html">DescribeBundleTasks</a></li>
+  <li class="tab-amazon-ec2-describe-conversion-tasks"><a href="describe-conversion-tasks.html">DescribeConversionTasks</a></li>
+  <li class="tab-amazon-ec2-describe-customer-gateways"><a href="describe-customer-gateways.html">DescribeCustomerGateways</a></li>
+  <li class="tab-amazon-ec2-describe-dhcp-options"><a href="describe-dhcp-options.html">DescribeDhcpOptions</a></li>
+  <li class="tab-amazon-ec2-describe-export-tasks"><a href="describe-export-tasks.html">DescribeExportTasks</a></li>
+  <li class="tab-amazon-ec2-describe-image-attribute"><a href="describe-image-attribute.html">DescribeImageAttribute</a></li>
+  <li class="tab-amazon-ec2-describe-images"><a href="describe-images.html">DescribeImages</a></li>
+  <li class="tab-amazon-ec2-describe-instance-attribute"><a href="describe-instance-attribute.html">DescribeInstanceAttribute</a></li>
+  <li class="tab-amazon-ec2-describe-instances"><a href="describe-instances.html">DescribeInstances</a></li>
+  <li class="tab-amazon-ec2-describe-instance-status"><a href="describe-instance-status.html">DescribeInstanceStatus</a></li>
+  <li class="tab-amazon-ec2-describe-internet-gateways"><a href="describe-internet-gateways.html">DescribeInternetGateways</a></li>
+  <li class="tab-amazon-ec2-describe-key-pairs"><a href="describe-key-pairs.html">DescribeKeyPairs</a></li>
+  <li class="tab-amazon-ec2-describe-network-acls"><a href="describe-network-acls.html">DescribeNetworkAcls</a></li>
+  <li class="tab-amazon-ec2-describe-network-interface-attribute"><a href="describe-network-interface-attribute.html">DescribeNetworkInterfaceAttribute</a></li>
+  <li class="tab-amazon-ec2-describe-network-interfaces"><a href="describe-network-interfaces.html">DescribeNetworkInterfaces</a></li>
+  <li class="tab-amazon-ec2-describe-placement-groups"><a href="describe-placement-groups.html">DescribePlacementGroups</a></li>
+  <li class="tab-amazon-ec2-describe-regions"><a href="describe-regions.html">DescribeRegions</a></li>
+  <li class="tab-amazon-ec2-describe-reserved-instances"><a href="describe-reserved-instances.html">DescribeReservedInstances</a></li>
+  <li class="tab-amazon-ec2-describe-reserved-instances-offerings"><a href="describe-reserved-instances-offerings.html">DescribeReservedInstancesOfferings</a></li>
+  <li class="tab-amazon-ec2-describe-route-tables"><a href="describe-route-tables.html">DescribeRouteTables</a></li>
+  <li class="tab-amazon-ec2-describe-security-groups"><a href="describe-security-groups.html">DescribeSecurityGroups</a></li>
+  <li class="tab-amazon-ec2-describe-snapshot-attribute"><a href="describe-snapshot-attribute.html">DescribeSnapshotAttribute</a></li>
+  <li class="tab-amazon-ec2-describe-snapshots"><a href="describe-snapshots.html">DescribeSnapshots</a></li>
+  <li class="tab-amazon-ec2-describe-spot-datafeed-subscription"><a href="describe-spot-datafeed-subscription.html">DescribeSpotDatafeedSubscription</a></li>
+  <li class="tab-amazon-ec2-describe-spot-instance-requests"><a href="describe-spot-instance-requests.html">DescribeSpotInstanceRequests</a></li>
+  <li class="tab-amazon-ec2-describe-spot-price-history"><a href="describe-spot-price-history.html">DescribeSpotPriceHistory</a></li>
+  <li class="tab-amazon-ec2-describe-subnets"><a href="describe-subnets.html">DescribeSubnets</a></li>
+  <li class="tab-amazon-ec2-describe-tags"><a href="describe-tags.html">DescribeTags</a></li>
+  <li class="tab-amazon-ec2-describe-volume-attribute"><a href="describe-volume-attribute.html">DescribeVolumeAttribute</a></li>
+  <li class="tab-amazon-ec2-describe-volumes"><a href="describe-volumes.html">DescribeVolumes</a></li>
+  <li class="tab-amazon-ec2-describe-volume-status"><a href="describe-volume-status.html">DescribeVolumeStatus</a></li>
+  <li class="tab-amazon-ec2-describe-vpcs"><a href="describe-vpcs.html">DescribeVpcs</a></li>
+  <li class="tab-amazon-ec2-describe-vpn-connections"><a href="describe-vpn-connections.html">DescribeVpnConnections</a></li>
+  <li class="tab-amazon-ec2-describe-vpn-gateways"><a href="describe-vpn-gateways.html">DescribeVpnGateways</a></li>
+  <li class="tab-amazon-ec2-detach-internet-gateway"><a href="detach-internet-gateway.html">DetachInternetGateway</a></li>
+  <li class="tab-amazon-ec2-detach-network-interface"><a href="detach-network-interface.html">DetachNetworkInterface</a></li>
+  <li class="tab-amazon-ec2-detach-volume"><a href="detach-volume.html">DetachVolume</a></li>
+  <li class="tab-amazon-ec2-detach-vpn-gateway"><a href="detach-vpn-gateway.html">DetachVpnGateway</a></li>
+  <li class="tab-amazon-ec2-disassociate-address"><a href="disassociate-address.html">DisassociateAddress</a></li>
+  <li class="tab-amazon-ec2-disassociate-route-table"><a href="disassociate-route-table.html">DisassociateRouteTable</a></li>
+  <li class="tab-amazon-ec2-enable-volume-io"><a href="enable-volume-io.html">EnableVolumeIo</a></li>
+  <li class="tab-amazon-ec2-get-console-output"><a href="get-console-output.html">GetConsoleOutput</a></li>
+  <li class="tab-amazon-ec2-get-password-data"><a href="get-password-data.html">GetPasswordData</a></li>
+  <li class="tab-amazon-ec2-import-instance"><a href="import-instance.html">ImportInstance</a></li>
+  <li class="tab-amazon-ec2-import-key-pair"><a href="import-key-pair.html">ImportKeyPair</a></li>
+  <li class="tab-amazon-ec2-import-volume"><a href="import-volume.html">ImportVolume</a></li>
+  <li class="tab-amazon-ec2-modify-image-attribute"><a href="modify-image-attribute.html">ModifyImageAttribute</a></li>
+  <li class="tab-amazon-ec2-modify-instance-attribute"><a href="modify-instance-attribute.html">ModifyInstanceAttribute</a></li>
+  <li class="tab-amazon-ec2-modify-network-interface-attribute"><a href="modify-network-interface-attribute.html">ModifyNetworkInterfaceAttribute</a></li>
+  <li class="tab-amazon-ec2-modify-snapshot-attribute"><a href="modify-snapshot-attribute.html">ModifySnapshotAttribute</a></li>
+  <li class="tab-amazon-ec2-modify-volume-attribute"><a href="modify-volume-attribute.html">ModifyVolumeAttribute</a></li>
+  <li class="tab-amazon-ec2-monitor-instances"><a href="monitor-instances.html">MonitorInstances</a></li>
+  <li class="tab-amazon-ec2-purchase-reserved-instances-offering"><a href="purchase-reserved-instances-offering.html">PurchaseReservedInstancesOffering</a></li>
+  <li class="tab-amazon-ec2-reboot-instances"><a href="reboot-instances.html">RebootInstances</a></li>
+  <li class="tab-amazon-ec2-register-image"><a href="register-image.html">RegisterImage</a></li>
+  <li class="tab-amazon-ec2-release-address"><a href="release-address.html">ReleaseAddress</a></li>
+  <li class="tab-amazon-ec2-replace-network-acl-association"><a href="replace-network-acl-association.html">ReplaceNetworkAclAssociation</a></li>
+  <li class="tab-amazon-ec2-replace-network-acl-entry"><a href="replace-network-acl-entry.html">ReplaceNetworkAclEntry</a></li>
+  <li class="tab-amazon-ec2-replace-route"><a href="replace-route.html">ReplaceRoute</a></li>
+  <li class="tab-amazon-ec2-replace-route-table-association"><a href="replace-route-table-association.html">ReplaceRouteTableAssociation</a></li>
+  <li class="tab-amazon-ec2-report-instance-status"><a href="report-instance-status.html">ReportInstanceStatus</a></li>
+  <li class="tab-amazon-ec2-request-spot-instances"><a href="request-spot-instances.html">RequestSpotInstances</a></li>
+  <li class="tab-amazon-ec2-reset-image-attribute"><a href="reset-image-attribute.html">ResetImageAttribute</a></li>
+  <li class="tab-amazon-ec2-reset-instance-attribute"><a href="reset-instance-attribute.html">ResetInstanceAttribute</a></li>
+  <li class="tab-amazon-ec2-reset-network-interface-attribute"><a href="reset-network-interface-attribute.html">ResetNetworkInterfaceAttribute</a></li>
+  <li class="tab-amazon-ec2-reset-snapshot-attribute"><a href="reset-snapshot-attribute.html">ResetSnapshotAttribute</a></li>
+  <li class="tab-amazon-ec2-revoke-security-group-egress"><a href="revoke-security-group-egress.html">RevokeSecurityGroupEgress</a></li>
+  <li class="tab-amazon-ec2-revoke-security-group-ingress"><a href="revoke-security-group-ingress.html">RevokeSecurityGroupIngress</a></li>
+  <li class="tab-amazon-ec2-run-instances"><a href="run-instances.html">RunInstances</a></li>
+  <li class="tab-amazon-ec2-start-instances"><a href="start-instances.html">StartInstances</a></li>
+  <li class="tab-amazon-ec2-stop-instances"><a href="stop-instances.html">StopInstances</a></li>
+  <li class="tab-amazon-ec2-terminate-instances"><a href="terminate-instances.html">TerminateInstances</a></li>
+  <li class="tab-amazon-ec2-unassign-private-ip-addresses"><a href="unassign-private-ip-addresses.html">UnassignPrivateIpAddresses</a></li>
+  <li class="tab-amazon-ec2-unmonitor-instances"><a href="unmonitor-instances.html">UnmonitorInstances</a></li>
