--- a/_includes/menu-amazon-simpledb.html
+++ b/_includes/menu-amazon-simpledb.html
@@ -3,17 +3,13 @@
   <li class="tab-amazon-simpledb nav-header">Amazon SimpleDB</li>
 
   <li class="nav-header">Operations and Examples</li>
-  <li><a href="/amazon/simpledb/batch-delete-attributes.html">BatchDeleteAttributes</a></li>
-  <li><a href="/amazon/simpledb/batch-put-attributes.html">BatchPutAttributes</a></li>
-  <li><a href="/amazon/simpledb/create-domain.html">CreateDomain</a></li>
-  <li><a href="/amazon/simpledb/delete-attributes.html">DeleteAttributes</a></li>
-  <li><a href="/amazon/simpledb/delete-domain.html">DeleteDomain</a></li>
-  <li><a href="/amazon/simpledb/domain-metadata.html">DomainMetadata</a></li>
-  <li><a href="/amazon/simpledb/get-attributes.html">GetAttributes</a></li>
-  <li><a href="/amazon/simpledb/list-domains.html">ListDomains</a></li>
-  <li><a href="/amazon/simpledb/put-attributes.html">PutAttributes</a></li>
-  <li><a href="/amazon/simpledb/select.html">Select</a></li>
-
-  <li class="nav-header">Gotchyas</li>
-  <li>None</li>
-
+  <li class="tab-amazon-simpledb-batch-delete-attributes"><a href="/amazon/simpledb/batch-delete-attributes.html">BatchDeleteAttributes</a></li>
+  <li class="tab-amazon-simpledb-batch-put-attributes"><a href="/amazon/simpledb/batch-put-attributes.html">BatchPutAttributes</a></li>
+  <li class="tab-amazon-simpledb-create-domain"><a href="/amazon/simpledb/create-domain.html">CreateDomain</a></li>
+  <li class="tab-amazon-simpledb-delete-attributes"><a href="/amazon/simpledb/delete-attributes.html">DeleteAttributes</a></li>
+  <li class="tab-amazon-simpledb-delete-domain"><a href="/amazon/simpledb/delete-domain.html">DeleteDomain</a></li>
+  <li class="tab-amazon-simpledb-domain-metadata"><a href="/amazon/simpledb/domain-metadata.html">DomainMetadata</a></li>
+  <li class="tab-amazon-simpledb-get-attributes"><a href="/amazon/simpledb/get-attributes.html">GetAttributes</a></li>
+  <li class="tab-amazon-simpledb-list-domains"><a href="/amazon/simpledb/list-domains.html">ListDomains</a></li>
+  <li class="tab-amazon-simpledb-put-attributes"><a href="/amazon/simpledb/put-attributes.html">PutAttributes</a></li>
+  <li class="tab-amazon-simpledb-select"><a href="/amazon/simpledb/select.html">Select</a></li>
