--- a/_includes/menu-amazon-s3.html
+++ b/_includes/menu-amazon-s3.html
@@ -1,55 +1,137 @@
   <li><a href="/amazon/">&laquo; back</a></li>
-
   <li class="tab-amazon-s3 nav-header">Amazon S3</li>
-
-  <li class="nav-header">Operations on the Service</li>
-  <li class="tab-amazon-s3-list-buckets"><a href="list-buckets.html">ListBuckets</a></li>
-
-  <li class="nav-header">Operations on Buckets</li>
-  <li class="tab-amazon-s3-delete-buckets"><a href="delete-buckets.html">DeleteBuckets</a></li>
-  <li class="tab-amazon-s3-delete-bucket-lifecycle"><a href="delete-bucket-lifecycle.html">DeleteBucketLifecycle</a></li>
-  <li class="tab-amazon-s3-delete-bucket-policy"><a href="delete-bucket-policy.html">DeleteBucketPolicy</a></li>
-  <li class="tab-amazon-s3-delete-bucket-tagging"><a href="delete-bucket-tagging.html">DeleteBucketTagging</a></li>
-  <li class="tab-amazon-s3-delete-bucket-website"><a href="delete-bucket-website.html">DeleteBucketWebsite</a></li>
-  <li class="tab-amazon-s3-list-objects"><a href="list-objects.html">ListObjects</a></li>
-  <li class="tab-amazon-s3-get-bucket-acl"><a href="get-bucket-acl.html">GetBucketAcl</a></li>
-  <li class="tab-amazon-s3-get-bucket-lifecycle"><a href="get-bucket-lifecycle.html">GetBucketLifecycle</a></li>
-  <li class="tab-amazon-s3-get-bucket-policy"><a href="get-bucket-policy.html">GetBucketPolicy</a></li>
-  <li class="tab-amazon-s3-get-bucket-tagging"><a href="get-bucket-tagging.html">GetBucketTagging</a></li>
-  <li class="tab-amazon-s3-get-bucket-location"><a href="get-bucket-location.html">GetBucketLocation</a></li>
-  <li class="tab-amazon-s3-get-bucket-logging"><a href="get-bucket-logging.html">GetBucketLogging</a></li>
-  <li class="tab-amazon-s3-get-bucket-notification"><a href="get-bucket-notification.html">GetBucketNotification</a></li>
-  <li class="tab-amazon-s3-get-bucket-objectversions"><a href="get-bucket-objectversions.html">GetBucketObjectVersions</a></li>
-  <li class="tab-amazon-s3-get-bucket-requestpayment"><a href="get-bucket-requestpayment.html">GetBucketRequestPayment</a></li>
-  <li class="tab-amazon-s3-get-bucket-versioning"><a href="get-bucket-versioning.html">GetBucketVersioning</a></li>
-  <li class="tab-amazon-s3-get-bucket-website"><a href="get-bucket-website.html">GetBucketWebsite</a></li>
-  <li class="tab-amazon-s3-check-bucket"><a href="check-bucket.html">CheckBucket</a></li>
-  <li class="tab-amazon-s3-list-multipart-uploads"><a href="list-multipart-uploads.html">ListMultipartUploads</a></li>
-  <li class="tab-amazon-s3-create-bucket"><a href="create-bucket.html">CreateBucket</a></li>
-  <li class="tab-amazon-s3-put-bucket-acl"><a href="put-bucket-acl.html">PutBucketAcl</a></li>
-  <li class="tab-amazon-s3-put-bucket-lifecycle"><a href="put-bucket-lifecycle.html">PutBucketLifecycle</a></li>
-  <li class="tab-amazon-s3-put-bucket-policy"><a href="put-bucket-policy.html">PutBucketPolicy</a></li>
-  <li class="tab-amazon-s3-put-bucket-logging"><a href="put-bucket-logging.html">PutBucketLogging</a></li>
-  <li class="tab-amazon-s3-put-bucket-notification"><a href="put-bucket-notification.html">PutBucketNotification</a></li>
-  <li class="tab-amazon-s3-put-bucket-tagging"><a href="put-bucket-tagging.html">PutBucketTagging</a></li>
-  <li class="tab-amazon-s3-put-bucket-requestpayment"><a href="put-bucket-requestpayment.html">PutBucketRequestPayment</a></li>
-  <li class="tab-amazon-s3-put-bucket-versioning"><a href="put-bucket-versioning.html">PutBucketVersioning</a></li>
-  <li class="tab-amazon-s3-put-bucket-website"><a href="put-bucket-website.html">PutBucketWebsite</a></li>
-
-  <li class="nav-header">Operations on Objects</li>
-  <li class="tab-amazon-s3-delete-object"><a href="delete-object.html">DeleteObject</a></li>
-  <li class="tab-amazon-s3-delete-multipleobjects"><a href="delete-multipleobjects.html">DeleteMultipleObjects</a></li>
-  <li class="tab-amazon-s3-get-object"><a href="get-object.html">GetObject</a></li>
-  <li class="tab-amazon-s3-get-object-acl"><a href="get-object-acl.html">GetObjectAcl</a></li>
-  <li class="tab-amazon-s3-get-object-torrent"><a href="get-object-torrent.html">GetObjectTorrent</a></li>
-  <li class="tab-amazon-s3-get-object-metadata"><a href="get-object-metadata.html">GetObjectMetadata</a></li>
-  <!--  PostObject -->
-  <li class="tab-amazon-s3-put-object"><a href="put-object.html">PutObject</a></li>
-  <li class="tab-amazon-s3-put-object-acl"><a href="put-object-acl.html">PutObjectAcl</a></li>
-  <li class="tab-amazon-s3-copy-object"><a href="copy-object.html">CopyObject</a></li>
-  <li class="tab-amazon-s3-initiate-multipart-upload"><a href="initiate-multipart-upload.html">InitiateMultipartUpload</a></li>
-  <li class="tab-amazon-s3-upload-part"><a href="upload-part.html">UploadPart</a></li>
-  <li class="tab-amazon-s3-upload-part-copy"><a href="upload-part-copy.html">UploadPartCopy</a></li>
-  <li class="tab-amazon-s3-complete-multipart-upload"><a href="complete-multipart-upload.html">CompleteMultipartUpload</a></li>
-  <li class="tab-amazon-s3-abort-multipart-upload"><a href="abort-multipart-upload.html">AbortMultipartUpload</a></li>
-  <li class="tab-amazon-s3-list-parts"><a href="list-parts.html">ListParts</a></li>
+  <li class="tab-amazon-s3-abort-multipart-upload">
+    <a href="/amazon/s3/AbortMultipartUpload.html">AbortMultipartUpload</a>
+  </li>
+  <li class="tab-amazon-s3-check-bucket">
+    <a href="/amazon/s3/CheckBucket.html">CheckBucket</a>
+  </li>
+  <li class="tab-amazon-s3-complete-multipart-upload">
+    <a href="/amazon/s3/CompleteMultipartUpload.html">CompleteMultipartUpload</a>
+  </li>
+  <li class="tab-amazon-s3-copy-object">
+    <a href="/amazon/s3/CopyObject.html">CopyObject</a>
+  </li>
+  <li class="tab-amazon-s3-create-bucket">
+    <a href="/amazon/s3/CreateBucket.html">CreateBucket</a>
+  </li>
+  <li class="tab-amazon-s3-delete-bucket">
+    <a href="/amazon/s3/DeleteBucket.html">DeleteBucket</a>
+  </li>
+  <li class="tab-amazon-s3-delete-bucket-lifecycle">
+    <a href="/amazon/s3/DeleteBucketLifecycle.html">DeleteBucketLifecycle</a>
+  </li>
+  <li class="tab-amazon-s3-delete-bucket-policy">
+    <a href="/amazon/s3/DeleteBucketPolicy.html">DeleteBucketPolicy</a>
+  </li>
+  <li class="tab-amazon-s3-delete-bucket-tagging">
+    <a href="/amazon/s3/DeleteBucketTagging.html">DeleteBucketTagging</a>
+  </li>
+  <li class="tab-amazon-s3-delete-bucket-website">
+    <a href="/amazon/s3/DeleteBucketWebsite.html">DeleteBucketWebsite</a>
+  </li>
+  <li class="tab-amazon-s3-delete-multiple-objects">
+    <a href="/amazon/s3/DeleteMultipleObjects.html">DeleteMultipleObjects</a>
+  </li>
+  <li class="tab-amazon-s3-delete-object">
+    <a href="/amazon/s3/DeleteObject.html">DeleteObject</a>
+  </li>
+  <li class="tab-amazon-s3-get-bucket-acl">
+    <a href="/amazon/s3/GetBucketAcl.html">GetBucketAcl</a>
+  </li>
+  <li class="tab-amazon-s3-get-bucket-lifecycle">
+    <a href="/amazon/s3/GetBucketLifecycle.html">GetBucketLifecycle</a>
+  </li>
+  <li class="tab-amazon-s3-get-bucket-location">
+    <a href="/amazon/s3/GetBucketLocation.html">GetBucketLocation</a>
+  </li>
+  <li class="tab-amazon-s3-get-bucket-logging">
+    <a href="/amazon/s3/GetBucketLogging.html">GetBucketLogging</a>
+  </li>
+  <li class="tab-amazon-s3-get-bucket-notification">
+    <a href="/amazon/s3/GetBucketNotification.html">GetBucketNotification</a>
+  </li>
+  <li class="tab-amazon-s3-get-bucket-object-versions">
+    <a href="/amazon/s3/GetBucketObjectVersions.html">GetBucketObjectVersions</a>
+  </li>
+  <li class="tab-amazon-s3-get-bucket-policy">
+    <a href="/amazon/s3/GetBucketPolicy.html">GetBucketPolicy</a>
+  </li>
+  <li class="tab-amazon-s3-get-bucket-request-payment">
+    <a href="/amazon/s3/GetBucketRequestPayment.html">GetBucketRequestPayment</a>
+  </li>
+  <li class="tab-amazon-s3-get-bucket-tagging">
+    <a href="/amazon/s3/GetBucketTagging.html">GetBucketTagging</a>
+  </li>
+  <li class="tab-amazon-s3-get-bucket-versioning">
+    <a href="/amazon/s3/GetBucketVersioning.html">GetBucketVersioning</a>
+  </li>
+  <li class="tab-amazon-s3-get-bucket-website">
+    <a href="/amazon/s3/GetBucketWebsite.html">GetBucketWebsite</a>
+  </li>
+  <li class="tab-amazon-s3-get-object">
+    <a href="/amazon/s3/GetObject.html">GetObject</a>
+  </li>
+  <li class="tab-amazon-s3-get-object-acl">
+    <a href="/amazon/s3/GetObjectAcl.html">GetObjectAcl</a>
+  </li>
+  <li class="tab-amazon-s3-get-object-metadata">
+    <a href="/amazon/s3/GetObjectMetadata.html">GetObjectMetadata</a>
+  </li>
+  <li class="tab-amazon-s3-get-object-torrent">
+    <a href="/amazon/s3/GetObjectTorrent.html">GetObjectTorrent</a>
+  </li>
+  <li class="tab-amazon-s3-initiate-multipart-upload">
+    <a href="/amazon/s3/InitiateMultipartUpload.html">InitiateMultipartUpload</a>
+  </li>
+  <li class="tab-amazon-s3-list-buckets">
+    <a href="/amazon/s3/ListBuckets.html">ListBuckets</a>
+  </li>
+  <li class="tab-amazon-s3-list-multipart-uploads">
+    <a href="/amazon/s3/ListMultipartUploads.html">ListMultipartUploads</a>
+  </li>
+  <li class="tab-amazon-s3-list-objects">
+    <a href="/amazon/s3/ListObjects.html">ListObjects</a>
+  </li>
+  <li class="tab-amazon-s3-list-parts">
+    <a href="/amazon/s3/ListParts.html">ListParts</a>
+  </li>
+  <li class="tab-amazon-s3-put-bucket-acl">
+    <a href="/amazon/s3/PutBucketAcl.html">PutBucketAcl</a>
+  </li>
+  <li class="tab-amazon-s3-put-bucket-lifecycle">
+    <a href="/amazon/s3/PutBucketLifecycle.html">PutBucketLifecycle</a>
+  </li>
+  <li class="tab-amazon-s3-put-bucket-logging">
+    <a href="/amazon/s3/PutBucketLogging.html">PutBucketLogging</a>
+  </li>
+  <li class="tab-amazon-s3-put-bucket-notification">
+    <a href="/amazon/s3/PutBucketNotification.html">PutBucketNotification</a>
+  </li>
+  <li class="tab-amazon-s3-put-bucket-policy">
+    <a href="/amazon/s3/PutBucketPolicy.html">PutBucketPolicy</a>
+  </li>
+  <li class="tab-amazon-s3-put-bucket-request-payment">
+    <a href="/amazon/s3/PutBucketRequestPayment.html">PutBucketRequestPayment</a>
+  </li>
+  <li class="tab-amazon-s3-put-bucket-tagging">
+    <a href="/amazon/s3/PutBucketTagging.html">PutBucketTagging</a>
+  </li>
+  <li class="tab-amazon-s3-put-bucket-versioning">
+    <a href="/amazon/s3/PutBucketVersioning.html">PutBucketVersioning</a>
+  </li>
+  <li class="tab-amazon-s3-put-bucket-website">
+    <a href="/amazon/s3/PutBucketWebsite.html">PutBucketWebsite</a>
+  </li>
+  <li class="tab-amazon-s3-put-object">
+    <a href="/amazon/s3/PutObject.html">PutObject</a>
+  </li>
+  <li class="tab-amazon-s3-put-object-acl">
+    <a href="/amazon/s3/PutObjectAcl.html">PutObjectAcl</a>
+  </li>
+  <li class="tab-amazon-s3-upload-part">
+    <a href="/amazon/s3/UploadPart.html">UploadPart</a>
+  </li>
+  <li class="tab-amazon-s3-upload-part-copy">
+    <a href="/amazon/s3/UploadPartCopy.html">UploadPartCopy</a>
+  </li>
